fixup! fix(ui): broken portfolio bar on narrow screen

--- a/packages/staking/src/features/browse-pools/StakePoolsTable/StakePoolsTable.module.scss
+++ b/packages/staking/src/features/browse-pools/StakePoolsTable/StakePoolsTable.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../../common/src/ui/styles/theme.scss';
 @import '../../../../../common/src/ui/styles/abstracts/typography';
 
-.stakePoolTable {
+.stakePoolsTable {
   @media screen and (min-width: $breakpoint-popup) {
     display: flex;
     flex-direction: column;
